; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_fchdir.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_fchdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.fd = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"fchdir(%d)\00", align 1
@_EBADF = common dso_local global i32 0, align 4
@current = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_fchdir(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.fd*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @STRACE(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.fd* @f_get(i32 %7)
  store %struct.fd* %8, %struct.fd** %4, align 8
  %9 = load %struct.fd*, %struct.fd** %4, align 8
  %10 = icmp eq %struct.fd* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @_EBADF, align 4
  store i32 %12, i32* %2, align 4
  br label %23

13:                                               ; preds = %1
  %14 = load %struct.fd*, %struct.fd** %4, align 8
  %15 = getelementptr inbounds %struct.fd, %struct.fd* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 4
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.fd*, %struct.fd** %4, align 8
  %22 = call i32 @fs_chdir(i32 %20, %struct.fd* %21)
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %13, %11
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @STRACE(i8*, i32) #1

declare dso_local %struct.fd* @f_get(i32) #1

declare dso_local i32 @fs_chdir(i32, %struct.fd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
